--- a/insurance/_assets/_partials/contact.mustache
+++ b/insurance/_assets/_partials/contact.mustache
@@ -8,7 +8,7 @@
             <div class="contact-detail-single">
 
                 <h3><i class="fa fa-map-marker"></i> Company informations</h3>
-                <p><strong>yourfuneralsolution</strong><br /> Johnathan Rios</p>
+                <p><strong>Helvetia Agent</strong><br /> <a href="/index.php?view=agent">Johnathan Rios</a></p>
                 <p class="without-margin-bottom">Spain<br /> Calpe, Alicante 03710</p>
 
             </div>
@@ -16,7 +16,7 @@
             <div class="contact-detail-single">
 
                 <h3><i class="fa fa-envelope-o"></i> Contact details</h3>
-                <!-- <p>E-mail address: <br /><a href="#">contact@insuranceagency.com</a></p> -->
+                <p>E-mail address: <br /><a href="mailto:jinsur09@yahoo.es">johnathanrios@yourfuneralsolution.com</a></p>
                 <p class="without-margin-bottom"><button class="button button-navy-blue" data-action="show-contact-popup">Contact us! <i class="fa fa-paper-plane-o"></i></button></p>
 
             </div>
