--- a/insurance/_assets/_partials/quote-popup.mustache
+++ b/insurance/_assets/_partials/quote-popup.mustache
@@ -23,9 +23,9 @@
             -->
             <div class="quote-form" data-quote-form-for="travel-insurance">
 
-                <i class="fa fa-bus background-icon"></i>
+                <i class="fa fa-heart-o background-icon"></i>
 
-                <div class="quote-form-background" style="background-image: url( '_assets/_img/image.png' );">
+                <div class="quote-form-background" style="background-image: url( '_assets/_img/healthcare-3.jpg' );">
                 </div>
 
                 <div class="quote-form-content">
@@ -106,7 +106,7 @@
 
                 <i class="fa fa-car background-icon"></i>
 
-                <div class="quote-form-background" style="background-image: url( '_assets/_img/image.png' );">
+                <div class="quote-form-background" style="background-image: url( '_assets/_img/car-2.jpg' );">
                 </div>
 
                 <div class="quote-form-content">
@@ -318,7 +318,7 @@
 
                 <i class="fa fa-umbrella background-icon"></i>
 
-                <div class="quote-form-background" style="background-image: url( '_assets/_img/image.png' );">
+                <div class="quote-form-background" style="background-image: url( '_assets/_img/funeral-2.jpg' );">
                 </div>
 
                 <div class="quote-form-content">
@@ -466,7 +466,7 @@
 
                 <i class="fa fa-home background-icon"></i>
 
-                <div class="quote-form-background" style="background-image: url( '_assets/_img/image.png' );">
+                <div class="quote-form-background" style="background-image: url( '_assets/_img/house-3.jpg' );">
                 </div>
 
                 <div class="quote-form-content">
