--- a/insurance/_assets/_partials/footer.mustache
+++ b/insurance/_assets/_partials/footer.mustache
@@ -14,10 +14,10 @@
                     <h4>Insurances</h4>
                     <ul class="sub">
 
-                        <li><a href="/life-insurance.html">Funeral Insurance</a></li>
-                        <li><a href="/car-insurance.html">Car insurance</a></li>
-                        <li><a href="/house-insurance.html">House insurance</a></li>
-                        <li><a href="/travel-insurance.html">Healthcare Insurance</a></li>
+                        <li><a href="/index.php?view=funeral-insurance">Funeral Insurance</a></li>
+                        <li><a href="/index.php?view=car-insurance">Car insurance</a></li>
+                        <li><a href="/index.php?view=house-insurance">House insurance</a></li>
+                        <li><a href="/index.php?view=healthcare-insurance">Healthcare Insurance</a></li>
 
                     </ul>
 
@@ -28,11 +28,11 @@
                     <h4>Pages</h4>
                     <ul class="sub">
 
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/agents.html">Agents</a></li>
-                        <li><a href="/claims.html">Claims</a></li>
+                        <li><a href="/index.php">Home</a></li>
+                        <li><a href="/index.php?view=agent">Agent</a></li>
+                        <!--<li><a href="/claims.html">Claims</a></li> -->
                         <li><button class="menu-element" data-action="show-quote-popup" data-quote-key="life-insurance">Get a quote</button></li>
-                        <li><a href="/blog.html">Blog</a></li>
+                        <!-- <li><a href="/blog.html">Blog</a></li> -->
                         <li><button class="menu-element" data-action="show-contact-popup">Contact</button></li>
 
                     </ul>
@@ -44,7 +44,7 @@
                     <h4>Find us!</h4>
                     <ul class="sub">
 
-                        <li><a href="#">Facebook</a></li>
+                        <li><a href="https://www.facebook.com/helvetiasegurosES">Facebook</a></li>
                         <li><a href="https://plus.google.com/u/0/115373549651992863727/posts">Google+</a></li>
 
                     </ul>
@@ -57,8 +57,8 @@
 
         <ul class="right">
 
-            <li>Copyright &copy; 2015 <span class="divider">&middot;</span> <a href="/index.html">yourfuneralsolution</a></li>
-            <li><div class="fb-like" data-href="https://www.facebook.com/envato" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div></li>
+            <li>Copyright &copy; 2015 <span class="divider">&middot;</span> <a href="/index.php">yourfuneralsolution</a></li>
+            <li><div class="fb-like" data-href="https://www.facebook.com/helvetiasegurosES" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div></li>
 
         </ul>
 
