--- a/insurance/_assets/_partials/header.mustache
+++ b/insurance/_assets/_partials/header.mustache
@@ -4,7 +4,7 @@
 
         <div class="logo">
 
-            <a href="/index.html"><img src="_assets/_img/logo.png" alt="Insurance Agency" /></a>
+            <a href="/index.php"><img src="_assets/_img/logo.png" alt="Insurance Agency" /></a>
 
         </div>
 
@@ -17,39 +17,39 @@
                 <!--<li><a href="/blog.html">Blog</a></li>-->
                 <li>
 
-                    <a href="/agents.html">Pages</a>
+                    <a href="#">Pages</a>
                     <i class="fa fa-caret-down"></i>
 
                     <ul class="submenu animated speed fadeInDown">
 
-                        <!-- <li><a href="/agents.html">Agents</a></li> -->
+                        <li><a href="/index.php?view=agent">Agent</a></li>
 
                         <li>
 
-                            <a href="/get-a-travel-insurance-quote.html"><i class="fa fa-caret-left"></i> Quote forms</a>
+                            <a href="/index.php?view=get-a-travel-insurance-quote"><i class="fa fa-caret-left"></i> Quote forms</a>
                             <ul class="submenu animated speed fadeInRight">
 
-                                <li><a href="/get-a-life-insurance-quote.html">Funeral Insurance Quote</a></li>
-                                <li><a href="/get-a-car-insurance-quote.html">Car insurance Quote</a></li>
-                                <li><a href="/get-a-house-insurance-quote.html">House insurance Quote</a></li>
-                                <li><a href="/get-a-travel-insurance-quote.html">Healthcare Insurance Quote</a></li>
+                                <li><a href="/index.php?view=get-a-funeral-insurance-quote">Funeral Insurance Quote</a></li>
+                                <li><a href="/index.php?view=get-a-car-insurance-quote">Car insurance Quote</a></li>
+                                <li><a href="/index.php?view=get-a-house-insurance-quote">House insurance Quote</a></li>
+                                <li><a href="/index.php?view=get-a-healthcare-insurance-quote">Healthcare Insurance Quote</a></li>
 
                             </ul>
 
                         </li>
 
-                        <li><a href="/claims.html">Claims</a></li>
-                        <li><a href="/contact.html">Contact page</a></li>
+                        <!-- <li><a href="/claims.html">Claims</a></li> -->
+                        <li><a href="/index.php?view=contact">Contact page</a></li>
 
                         <li>
 
-                            <a href="/travel-insurance.html"><i class="fa fa-caret-left"></i> Insurances promo</a>
+                            <a href="/index.php?view=travel-insurance"><i class="fa fa-caret-left"></i> Insurances promo</a>
                             <ul class="submenu animated speed fadeInRight">
 
-                                <li><a href="/life-insurance.html">Funeral Insurance</a></li>
-                                <li><a href="/car-insurance.html">Car insurance</a></li>
-                                <li><a href="/house-insurance.php">House insurance</a></li>
-                                <li><a href="/travel-insurance.html">Healthcare Insurance</a></li>
+                                <li><a href="/index.php?view=funeral-insurance">Funeral Insurance</a></li>
+                                <li><a href="/index.php?view=car-insurance">Car insurance</a></li>
+                                <li><a href="/index.php?view=house-insurance">House insurance</a></li>
+                                <li><a href="/index.php?view=healthcare-insurance">Healthcare Insurance</a></li>
 
                             </ul>
 
