Minor final changes

--- a/insurance/_assets/_partials/footer.mustache
+++ b/insurance/_assets/_partials/footer.mustache
@@ -45,7 +45,7 @@
                     <ul class="sub">
 
                         <li><a href="https://www.facebook.com/helvetiasegurosES">Facebook</a></li>
-                        <li><a href="https://plus.google.com/u/0/115373549651992863727/posts">Google+</a></li>
+                        <li><a href="https://plus.google.com/u/0/+HelvetiaSegurosEspa%C3%B1a/posts">Google+</a></li>
 
                     </ul>
 
