--- a/insurance/_assets/_partials/quote-popup.mustache
+++ b/insurance/_assets/_partials/quote-popup.mustache
@@ -33,7 +33,7 @@
                     <h2>Healthcare Insurance <span>Quote</span></h2>
                     <div class="form">
 
-                        <h4>Level of protection: <span class="slider-value quote-form-element" data-name="Level of protection" data-slider-id="travel-protection-level">$<span></span></span></h4>
+                        <h4>Level of protection: <span class="slider-value quote-form-element" data-name="Level of protection" data-slider-id="travel-protection-level"><span></span>€</span></h4>
                         <div class="slider" data-slider-min="10000" data-slider-max="1000000" data-slider-start="200000" data-slider-step="10000" data-slider-id="travel-protection-level"></div>
 
                         <h4>Contact details:</h4>
@@ -323,10 +323,10 @@
 
                 <div class="quote-form-content">
 
-                    <h2>Funeral Insurance <span>Quote</span></h2>
+                    <h2>Funeral & Life Insurance <span>Quote</span></h2>
                     <div class="form">
 
-                        <h4>Level of protection: <span class="slider-value quote-form-element" data-name="Level of protection" data-slider-id="life-protection-level">$<span></span></span></h4>
+                        <h4>Level of protection: <span class="slider-value quote-form-element" data-name="Level of protection" data-slider-id="life-protection-level"><span></span>€</span></h4>
                         <div class="slider" data-slider-min="10000" data-slider-max="1000000" data-slider-start="200000" data-slider-step="10000" data-slider-id="life-protection-level"></div>
 
                         <h4>Contact details:</h4>
