--- a/insurance/_assets/_partials/footer.mustache
+++ b/insurance/_assets/_partials/footer.mustache
@@ -58,6 +58,8 @@
         <ul class="right">
 
             <li>Copyright &copy; 2015 <span class="divider">&middot;</span> <a href="/index.php">yourfuneralsolution</a></li>
+            <li>Exclusive Insurance Agent for Helvetia</li>
+            <li>DGSFP Number: CO15750853849K</li>
             <li><div class="fb-like" data-href="https://www.facebook.com/helvetiasegurosES" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div></li>
 
         </ul>
