Update corporate email

--- a/insurance/_assets/_partials/contact.mustache
+++ b/insurance/_assets/_partials/contact.mustache
@@ -16,7 +16,7 @@
             <div class="contact-detail-single">
 
                 <h3><i class="fa fa-envelope-o"></i> Contact details</h3>
-                <p>E-mail address: <br /><a href="mailto:jinsur09@yahoo.es">johnathanrios@yourfuneralsolution.com</a></p>
+                <p>E-mail address: <br /><a href="mailto:jonatan.rios@asesores.helvetia.es">jonatan.rios@asesores.helvetia.es</a></p>
                 <p class="without-margin-bottom"><button class="button button-navy-blue" data-action="show-contact-popup">Contact us! <i class="fa fa-paper-plane-o"></i></button></p>
 
             </div>
